get tweets from user

--- a/twitter_basic_crawling.ipynb
+++ b/twitter_basic_crawling.ipynb
@@ -25,9 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tweepy\n",
@@ -59,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Using the API object to get tweets from your timeline, and storing it in a variable called public_tweets\n",
@@ -97,13 +93,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The Twitter user who we want to get tweets from\n",
-    "name = \"SPECIFIC-USER\"\n",
+    "name = \"TomHolland1996\"\n",
     "\n",
     "# Number of tweets to pull\n",
     "tweetCount = 20\n",
@@ -133,19 +127,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The Twitter user who we want to get tweets from\n",
-    "name = \"SPECIFIC-USER\"\n",
+    "name = \"TomHolland1996\"\n",
     "\n",
     "# Number of tweets to pull\n",
     "tweetCount = 20\n",
     "\n",
     "# Calling the user_timeline function with our parameters\n",
     "results = api.user_timeline(id=name, count=tweetCount)\n",
+    "\n",
     "\n",
     "# foreach through all tweets pulled\n",
     "for tweet in results:\n",
@@ -190,9 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The search term you want to find\n",
@@ -231,9 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The Twitter user who we want to get his friends\n",
@@ -262,9 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The Twitter user who we want to get his followers\n",
@@ -304,9 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The WOE code to ask for trends (i.e., WOEID = 1 means the world)\n",
@@ -338,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
